--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.20",
+    "postgres": "^3.3.2"
   }
 }
